fix: gap pada header form

--- a/form/style.css
+++ b/form/style.css
@@ -33,6 +33,10 @@ main {
   z-index: 10;
 }
 
+.wrapContent {
+        gap: 0px !important;
+    }
+
 .container {
   width: 100%;
   overflow-y: auto;
@@ -418,6 +422,9 @@ main {
 }
 
 @media (min-width: 1024px) {
+    .wrapContent {
+        gap: 0px !important;
+    }
   .header {
     position: sticky;
     top: 0;
